Updated tempAuto implementation